--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
         <div id="exitLevel">Exit</div>
     </div>
     <div style="display:none">
-        <script src="JS/objects.js"></script> <!-- Just makes shortcuts for DOM manipulation and other things -->
-        <script src="JS/colors.js"></script> <!-- Always above entities.js and game.js -->
-        <script src="JS/menu.js"></script> <!-- Must always be above game and levels -->
-        <script src="JS/levels.js"></script> <!-- Must be above game and below menu -->
-        <script src="JS/entities.js"></script> <!-- Entities -->
-        <script src="JS/game.js"></script> <!-- Must be the lowest one for reasons -->
+        <script src="https://raw.githubusercontent.com/Williek11/CubeGame/master/JS/objects.js"></script> <!-- Just makes shortcuts for DOM manipulation and other things -->
+        <script src="https://raw.githubusercontent.com/Williek11/CubeGame/master/JS/colors.js"></script> <!-- Always above entities.js and game.js -->
+        <script src="https://raw.githubusercontent.com/Williek11/CubeGame/master/JS/menu.js"></script> <!-- Must always be above game and levels -->
+        <script src="https://raw.githubusercontent.com/Williek11/CubeGame/master/JS/levels.js"></script> <!-- Must be above game and below menu -->
+        <script src="https://raw.githubusercontent.com/Williek11/CubeGame/master/JS/entities.js"></script> <!-- Entities -->
+        <script src="https://raw.githubusercontent.com/Williek11/CubeGame/master/JS/game.js"></script> <!-- Must be the lowest one for reasons -->
     </div>
 </body>
 
