--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
     </div>
     <div style="display:none">
         <script>
+            console.log("you did it")
             const newScript = ()=>{return document.createElement("script")}
             const appendScript = (script)=>{document.getElementsByTagName("body")[0].appendChild(script)}
             const script1 = newScript()
